# redfish-rs

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: async_account_list.rs  async_service_root.rs  async_simple_update.rs  blocking_account_list.rs  blocking_service_root.rs  blocking_simple_update.rs
src/: auth.rs  error.rs  lib.rs
src/api/: account_service.rs  action.rs  chassis.rs  chassis_resource.rs  event_service.rs  json_schemas.rs  manager_resource.rs  managers.rs  mod.rs  registries.rs  service_root.rs  sessions.rs  system_resource.rs  systems.rs  task_service.rs  update_service.rs
src/client/: mod.rs
src/transport/: async_transport.rs  blocking_transport.rs  mod.rs
src/types/: account.rs  account_service.rs  actions.rs  bios.rs  chassis.rs  collection.rs  common.rs  ethernet.rs  event_service.rs  json_schema.rs  log_service.rs  manager.rs  mod.rs  network_protocol.rs  odata.rs  power.rs  registry.rs  role.rs  sensor.rs  service_root.rs  session.rs  storage.rs  subscription.rs  system.rs  system_update.rs  task.rs  task_service.rs  thermal.rs  update_service.rs
src/util/: mod.rs  redact.rs  retry.rs  url.rs
tests/: async_basic.rs  blocking_basic.rs  odata_query.rs  platform_services_async.rs  platform_services_blocking.rs  request_json_value.rs
