[package]
name = "redfish"
version = "0.3.2"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "Production-grade Rust SDK for DMTF Redfish (async-first, optional blocking)."
readme = "README.md"
keywords = ["redfish", "bmc", "ipmi", "oem", "dmtf"]
categories = ["api-bindings", "network-programming"]
documentation = "https://docs.rs/redfish"
repository = "https://github.com/lvillis/redfish-rs"
homepage = "https://github.com/lvillis/redfish-rs"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "src/**",
  "examples/**",
  "tests/**",
]

[package.metadata.docs.rs]
no-default-features = true
features = ["async-tls-rustls-ring", "blocking-tls-rustls-ring"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["async-tls-rustls-ring"]
_async = []
_blocking = []

# reqx transport + TLS features
async-tls-rustls-ring = ["_async", "dep:reqx", "dep:tokio", "reqx?/async-tls-rustls-ring"]
async-tls-rustls-aws-lc-rs = [
  "_async",
  "dep:reqx",
  "dep:tokio",
  "reqx?/async-tls-rustls-aws-lc-rs",
]
async-tls-native = ["_async", "dep:reqx", "dep:tokio", "reqx?/async-tls-native"]
blocking-tls-rustls-ring = ["_blocking", "dep:reqx", "reqx?/blocking-tls-rustls-ring"]
blocking-tls-rustls-aws-lc-rs = [
  "_blocking",
  "dep:reqx",
  "reqx?/blocking-tls-rustls-aws-lc-rs",
]
blocking-tls-native = ["_blocking", "dep:reqx", "reqx?/blocking-tls-native"]

# Observability
tracing = ["dep:tracing"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
fastrand = { version = "2.4.1", default-features = false, features = ["std"] }
http = { version = "1.4.0", default-features = false, features = ["std"] }
httpdate = { version = "1.0.3", default-features = false }
reqx = { version = "0.1.34", default-features = false, optional = true }
secrecy = { version = "0.10.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
serde_path_to_error = { version = "0.1.20", default-features = false }
tokio = { version = "1.51.1", default-features = false, features = ["rt", "time"], optional = true }
tracing = { version = "0.1.44", default-features = false, optional = true }
url = { version = "2.5.8", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1.51.1", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
wiremock = { version = "0.6.5", default-features = false }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }


[[example]]
name = "async_service_root"
path = "examples/async_service_root.rs"
required-features = ["_async"]

[[example]]
name = "async_account_list"
path = "examples/async_account_list.rs"
required-features = ["_async"]

[[example]]
name = "async_simple_update"
path = "examples/async_simple_update.rs"
required-features = ["_async"]

[[example]]
name = "blocking_service_root"
path = "examples/blocking_service_root.rs"
required-features = ["_blocking"]

[[example]]
name = "blocking_account_list"
path = "examples/blocking_account_list.rs"
required-features = ["_blocking"]

[[example]]
name = "blocking_simple_update"
path = "examples/blocking_simple_update.rs"
required-features = ["_blocking"]

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
